examples/test/testpolicy3401.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3401
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key12: value8
      key19: value37
      key11: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value47
          key35: value12
          key26: value39
      podSelector:
        matchLabels:
          key34: value49
          key0: value27
          key29: value27
